[project]
name = "rsshub-python"
version = "0.1.0"
description = "RSSHub for pythonista"
readme = "README.md"
requires-python = ">=3.9,<4.0"

authors = [
    { name = "pandamoon21", email = "33972938+pandamoon21@users.noreply.github.com" }
]

dependencies = [
    "bootstrap-flask",
    "feedparser==6.0.8",
    "flask-debugtoolbar",
    "flask-moment",
    "Flask",
    "python-dotenv",
    "markupsafe==2.0.1",
    "gunicorn",
    "requests",
    "parsel",
    "flask-script",
    "icecream",
    "flask-analytics",
    "arrow==1.2.2",
    "httpx",
    "tinydb",
    "tokopaedi-async==0.1.2",
    "bs4 (>=0.0.2,<0.0.3)"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pdir2",
    "ptpython",
    "yapf",
    "pylint"
]

[project.scripts]
test = "python -m unittest discover"
coverage = "coverage run -m unittest discover"

[tool.poetry]
packages = [
    { include = "rsshub_python", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
